--- a/substack/articles/2025.01.13-integration_with_gcs_ease/sratchpad.ipynb
+++ b/substack/articles/2025.01.13-integration_with_gcs_ease/sratchpad.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -229,15 +229,24 @@
     "from datafusion.object_store import GoogleCloud\n",
     "gs = GoogleCloud(bucket_name = bucket)\n",
     "ctx.register_object_store(\"gs://\", gs, None)\n",
+    "\n",
+    "\n",
     "sql = f\"\"\"\n",
-    "    CREATE EXTERNAL TABLE test_data (\n",
-    "        a int, b int, c int\n",
-    "    )\n",
+    "    CREATE EXTERNAL TABLE test_data1\n",
     "    stored as csv\n",
     "    location 'gs://{bucket}/test.csv'\n",
     "\"\"\"\n",
     "ctx.sql(sql)\n",
-    "ctx.sql(\"select * from test_data\").show()"
+    "ctx.sql(\"select * from test_data1\").show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#ctx.sql(f\"select * from 'gs://{bucket}/test.csv'\")"
    ]
   },
   {
