--- a/substack/articles/2025.02.07-Why_partitions_matter/scratchpad.ipynb
+++ b/substack/articles/2025.02.07-Why_partitions_matter/scratchpad.ipynb
@@ -2,44 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ":: loading settings :: url = jar:file:/Users/matthewmartin/dream_machine/substack/articles/2025.02.07-Why_partitions_matter/.venv/lib/python3.13/site-packages/pyspark/jars/ivy-2.5.1.jar!/org/apache/ivy/core/settings/ivysettings.xml\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Ivy Default Cache set to: /Users/matthewmartin/.ivy2/cache\n",
-      "The jars for the packages stored in: /Users/matthewmartin/.ivy2/jars\n",
-      "org.apache.iceberg#iceberg-spark-runtime-3.5_2.12 added as a dependency\n",
-      ":: resolving dependencies :: org.apache.spark#spark-submit-parent-917502df-1ce2-4813-ba95-22c47fb02128;1.0\n",
-      "\tconfs: [default]\n",
-      "\tfound org.apache.iceberg#iceberg-spark-runtime-3.5_2.12;1.7.0 in central\n",
-      ":: resolution report :: resolve 39ms :: artifacts dl 1ms\n",
-      "\t:: modules in use:\n",
-      "\torg.apache.iceberg#iceberg-spark-runtime-3.5_2.12;1.7.0 from central in [default]\n",
-      "\t---------------------------------------------------------------------\n",
-      "\t|                  |            modules            ||   artifacts   |\n",
-      "\t|       conf       | number| search|dwnlded|evicted|| number|dwnlded|\n",
-      "\t---------------------------------------------------------------------\n",
-      "\t|      default     |   1   |   0   |   0   |   0   ||   1   |   0   |\n",
-      "\t---------------------------------------------------------------------\n",
-      ":: retrieving :: org.apache.spark#spark-submit-parent-917502df-1ce2-4813-ba95-22c47fb02128\n",
-      "\tconfs: [default]\n",
-      "\t0 artifacts copied, 1 already retrieved (0kB/2ms)\n",
-      "25/02/05 05:57:54 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "spark_version = \"3.5\"\n",
     "scala_version = \"2.12\"\n",
@@ -124,7 +89,6 @@
     }
    ],
    "source": [
-    "\n",
     "dg.save_csv_files(df, dfo, \".\", \"v1\")"
    ]
   },
@@ -136,30 +100,6 @@
    "source": [
     "dfh = spark.read.csv(\"./raw_data/ord_hdr/*\", header=True)\n",
     "dfd = spark.read.csv(\"./raw_data/ord_dtl/*\", header=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Row(order_date='2023-01-01', order_id='ORD-00001', customer_id='CUST-0101', order_status='Shipped', order_total='213.24'),\n",
-       " Row(order_date='2023-01-01', order_id='ORD-00002', customer_id='CUST-0345', order_status='Delivered', order_total='982.84'),\n",
-       " Row(order_date='2023-01-01', order_id='ORD-00003', customer_id='CUST-0436', order_status='Cancelled', order_total='1020.06'),\n",
-       " Row(order_date='2023-01-01', order_id='ORD-00004', customer_id='CUST-0321', order_status='Pending', order_total='1175.73'),\n",
-       " Row(order_date='2023-01-01', order_id='ORD-00005', customer_id='CUST-0435', order_status='Shipped', order_total='1184.62')]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dfh.head(5)"
    ]
   },
   {
@@ -188,165 +128,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "25/02/05 05:58:21 WARN HadoopTableOperations: Error reading version hint file icehouse/test_ns/ord_hdr_partitioned/metadata/version-hint.text\n",
-      "java.io.FileNotFoundException: File icehouse/test_ns/ord_hdr_partitioned/metadata/version-hint.text does not exist\n",
-      "\tat org.apache.hadoop.fs.RawLocalFileSystem.deprecatedGetFileStatus(RawLocalFileSystem.java:779)\n",
-      "\tat org.apache.hadoop.fs.RawLocalFileSystem.getFileLinkStatusInternal(RawLocalFileSystem.java:1100)\n",
-      "\tat org.apache.hadoop.fs.RawLocalFileSystem.getFileStatus(RawLocalFileSystem.java:769)\n",
-      "\tat org.apache.hadoop.fs.FilterFileSystem.getFileStatus(FilterFileSystem.java:462)\n",
-      "\tat org.apache.hadoop.fs.ChecksumFileSystem$ChecksumFSInputChecker.<init>(ChecksumFileSystem.java:160)\n",
-      "\tat org.apache.hadoop.fs.ChecksumFileSystem.open(ChecksumFileSystem.java:372)\n",
-      "\tat org.apache.hadoop.fs.FileSystem.open(FileSystem.java:976)\n",
-      "\tat org.apache.iceberg.hadoop.HadoopTableOperations.findVersion(HadoopTableOperations.java:317)\n",
-      "\tat org.apache.iceberg.hadoop.HadoopTableOperations.refresh(HadoopTableOperations.java:103)\n",
-      "\tat org.apache.iceberg.BaseTransaction.lambda$commitReplaceTransaction$1(BaseTransaction.java:368)\n",
-      "\tat org.apache.iceberg.util.Tasks$Builder.runTaskWithRetry(Tasks.java:413)\n",
-      "\tat org.apache.iceberg.util.Tasks$Builder.runSingleThreaded(Tasks.java:219)\n",
-      "\tat org.apache.iceberg.util.Tasks$Builder.run(Tasks.java:203)\n",
-      "\tat org.apache.iceberg.util.Tasks$Builder.run(Tasks.java:196)\n",
-      "\tat org.apache.iceberg.BaseTransaction.commitReplaceTransaction(BaseTransaction.java:365)\n",
-      "\tat org.apache.iceberg.BaseTransaction.commitTransaction(BaseTransaction.java:314)\n",
-      "\tat org.apache.iceberg.CommitCallbackTransaction.commitTransaction(CommitCallbackTransaction.java:126)\n",
-      "\tat org.apache.iceberg.spark.source.StagedSparkTable.commitStagedChanges(StagedSparkTable.java:34)\n",
-      "\tat org.apache.spark.sql.execution.datasources.v2.V2CreateTableAsSelectBaseExec.$anonfun$writeToTable$1(WriteToDataSourceV2Exec.scala:585)\n",
-      "\tat org.apache.spark.util.Utils$.tryWithSafeFinallyAndFailureCallbacks(Utils.scala:1397)\n",
-      "\tat org.apache.spark.sql.execution.datasources.v2.V2CreateTableAsSelectBaseExec.writeToTable(WriteToDataSourceV2Exec.scala:578)\n",
-      "\tat org.apache.spark.sql.execution.datasources.v2.V2CreateTableAsSelectBaseExec.writeToTable$(WriteToDataSourceV2Exec.scala:572)\n",
-      "\tat org.apache.spark.sql.execution.datasources.v2.AtomicReplaceTableAsSelectExec.writeToTable(WriteToDataSourceV2Exec.scala:186)\n",
-      "\tat org.apache.spark.sql.execution.datasources.v2.AtomicReplaceTableAsSelectExec.run(WriteToDataSourceV2Exec.scala:221)\n",
-      "\tat org.apache.spark.sql.execution.datasources.v2.V2CommandExec.result$lzycompute(V2CommandExec.scala:43)\n",
-      "\tat org.apache.spark.sql.execution.datasources.v2.V2CommandExec.result(V2CommandExec.scala:43)\n",
-      "\tat org.apache.spark.sql.execution.datasources.v2.V2CommandExec.executeCollect(V2CommandExec.scala:49)\n",
-      "\tat org.apache.spark.sql.execution.QueryExecution$$anonfun$eagerlyExecuteCommands$1.$anonfun$applyOrElse$1(QueryExecution.scala:107)\n",
-      "\tat org.apache.spark.sql.execution.SQLExecution$.$anonfun$withNewExecutionId$6(SQLExecution.scala:125)\n",
-      "\tat org.apache.spark.sql.execution.SQLExecution$.withSQLConfPropagated(SQLExecution.scala:201)\n",
-      "\tat org.apache.spark.sql.execution.SQLExecution$.$anonfun$withNewExecutionId$1(SQLExecution.scala:108)\n",
-      "\tat org.apache.spark.sql.SparkSession.withActive(SparkSession.scala:900)\n",
-      "\tat org.apache.spark.sql.execution.SQLExecution$.withNewExecutionId(SQLExecution.scala:66)\n",
-      "\tat org.apache.spark.sql.execution.QueryExecution$$anonfun$eagerlyExecuteCommands$1.applyOrElse(QueryExecution.scala:107)\n",
-      "\tat org.apache.spark.sql.execution.QueryExecution$$anonfun$eagerlyExecuteCommands$1.applyOrElse(QueryExecution.scala:98)\n",
-      "\tat org.apache.spark.sql.catalyst.trees.TreeNode.$anonfun$transformDownWithPruning$1(TreeNode.scala:461)\n",
-      "\tat org.apache.spark.sql.catalyst.trees.CurrentOrigin$.withOrigin(origin.scala:76)\n",
-      "\tat org.apache.spark.sql.catalyst.trees.TreeNode.transformDownWithPruning(TreeNode.scala:461)\n",
-      "\tat org.apache.spark.sql.catalyst.plans.logical.LogicalPlan.org$apache$spark$sql$catalyst$plans$logical$AnalysisHelper$$super$transformDownWithPruning(LogicalPlan.scala:32)\n",
-      "\tat org.apache.spark.sql.catalyst.plans.logical.AnalysisHelper.transformDownWithPruning(AnalysisHelper.scala:267)\n",
-      "\tat org.apache.spark.sql.catalyst.plans.logical.AnalysisHelper.transformDownWithPruning$(AnalysisHelper.scala:263)\n",
-      "\tat org.apache.spark.sql.catalyst.plans.logical.LogicalPlan.transformDownWithPruning(LogicalPlan.scala:32)\n",
-      "\tat org.apache.spark.sql.catalyst.plans.logical.LogicalPlan.transformDownWithPruning(LogicalPlan.scala:32)\n",
-      "\tat org.apache.spark.sql.catalyst.trees.TreeNode.transformDown(TreeNode.scala:437)\n",
-      "\tat org.apache.spark.sql.execution.QueryExecution.eagerlyExecuteCommands(QueryExecution.scala:98)\n",
-      "\tat org.apache.spark.sql.execution.QueryExecution.commandExecuted$lzycompute(QueryExecution.scala:85)\n",
-      "\tat org.apache.spark.sql.execution.QueryExecution.commandExecuted(QueryExecution.scala:83)\n",
-      "\tat org.apache.spark.sql.Dataset.<init>(Dataset.scala:220)\n",
-      "\tat org.apache.spark.sql.Dataset$.$anonfun$ofRows$2(Dataset.scala:100)\n",
-      "\tat org.apache.spark.sql.SparkSession.withActive(SparkSession.scala:900)\n",
-      "\tat org.apache.spark.sql.Dataset$.ofRows(Dataset.scala:97)\n",
-      "\tat org.apache.spark.sql.SparkSession.$anonfun$sql$1(SparkSession.scala:638)\n",
-      "\tat org.apache.spark.sql.SparkSession.withActive(SparkSession.scala:900)\n",
-      "\tat org.apache.spark.sql.SparkSession.sql(SparkSession.scala:629)\n",
-      "\tat org.apache.spark.sql.SparkSession.sql(SparkSession.scala:659)\n",
-      "\tat java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)\n",
-      "\tat java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)\n",
-      "\tat java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)\n",
-      "\tat java.base/java.lang.reflect.Method.invoke(Method.java:568)\n",
-      "\tat py4j.reflection.MethodInvoker.invoke(MethodInvoker.java:244)\n",
-      "\tat py4j.reflection.ReflectionEngine.invoke(ReflectionEngine.java:374)\n",
-      "\tat py4j.Gateway.invoke(Gateway.java:282)\n",
-      "\tat py4j.commands.AbstractCommand.invokeMethod(AbstractCommand.java:132)\n",
-      "\tat py4j.commands.CallCommand.execute(CallCommand.java:79)\n",
-      "\tat py4j.ClientServerConnection.waitForCommands(ClientServerConnection.java:182)\n",
-      "\tat py4j.ClientServerConnection.run(ClientServerConnection.java:106)\n",
-      "\tat java.base/java.lang.Thread.run(Thread.java:833)\n",
-      "25/02/05 05:58:21 WARN HadoopTableOperations: Error reading version hint file icehouse/test_ns/ord_hdr_partitioned/metadata/version-hint.text\n",
-      "java.io.FileNotFoundException: File icehouse/test_ns/ord_hdr_partitioned/metadata/version-hint.text does not exist\n",
-      "\tat org.apache.hadoop.fs.RawLocalFileSystem.deprecatedGetFileStatus(RawLocalFileSystem.java:779)\n",
-      "\tat org.apache.hadoop.fs.RawLocalFileSystem.getFileLinkStatusInternal(RawLocalFileSystem.java:1100)\n",
-      "\tat org.apache.hadoop.fs.RawLocalFileSystem.getFileStatus(RawLocalFileSystem.java:769)\n",
-      "\tat org.apache.hadoop.fs.FilterFileSystem.getFileStatus(FilterFileSystem.java:462)\n",
-      "\tat org.apache.hadoop.fs.ChecksumFileSystem$ChecksumFSInputChecker.<init>(ChecksumFileSystem.java:160)\n",
-      "\tat org.apache.hadoop.fs.ChecksumFileSystem.open(ChecksumFileSystem.java:372)\n",
-      "\tat org.apache.hadoop.fs.FileSystem.open(FileSystem.java:976)\n",
-      "\tat org.apache.iceberg.hadoop.HadoopTableOperations.findVersion(HadoopTableOperations.java:317)\n",
-      "\tat org.apache.iceberg.hadoop.HadoopTableOperations.refresh(HadoopTableOperations.java:103)\n",
-      "\tat org.apache.iceberg.hadoop.HadoopTableOperations.current(HadoopTableOperations.java:83)\n",
-      "\tat org.apache.iceberg.BaseTransaction.lambda$commitReplaceTransaction$1(BaseTransaction.java:377)\n",
-      "\tat org.apache.iceberg.util.Tasks$Builder.runTaskWithRetry(Tasks.java:413)\n",
-      "\tat org.apache.iceberg.util.Tasks$Builder.runSingleThreaded(Tasks.java:219)\n",
-      "\tat org.apache.iceberg.util.Tasks$Builder.run(Tasks.java:203)\n",
-      "\tat org.apache.iceberg.util.Tasks$Builder.run(Tasks.java:196)\n",
-      "\tat org.apache.iceberg.BaseTransaction.commitReplaceTransaction(BaseTransaction.java:365)\n",
-      "\tat org.apache.iceberg.BaseTransaction.commitTransaction(BaseTransaction.java:314)\n",
-      "\tat org.apache.iceberg.CommitCallbackTransaction.commitTransaction(CommitCallbackTransaction.java:126)\n",
-      "\tat org.apache.iceberg.spark.source.StagedSparkTable.commitStagedChanges(StagedSparkTable.java:34)\n",
-      "\tat org.apache.spark.sql.execution.datasources.v2.V2CreateTableAsSelectBaseExec.$anonfun$writeToTable$1(WriteToDataSourceV2Exec.scala:585)\n",
-      "\tat org.apache.spark.util.Utils$.tryWithSafeFinallyAndFailureCallbacks(Utils.scala:1397)\n",
-      "\tat org.apache.spark.sql.execution.datasources.v2.V2CreateTableAsSelectBaseExec.writeToTable(WriteToDataSourceV2Exec.scala:578)\n",
-      "\tat org.apache.spark.sql.execution.datasources.v2.V2CreateTableAsSelectBaseExec.writeToTable$(WriteToDataSourceV2Exec.scala:572)\n",
-      "\tat org.apache.spark.sql.execution.datasources.v2.AtomicReplaceTableAsSelectExec.writeToTable(WriteToDataSourceV2Exec.scala:186)\n",
-      "\tat org.apache.spark.sql.execution.datasources.v2.AtomicReplaceTableAsSelectExec.run(WriteToDataSourceV2Exec.scala:221)\n",
-      "\tat org.apache.spark.sql.execution.datasources.v2.V2CommandExec.result$lzycompute(V2CommandExec.scala:43)\n",
-      "\tat org.apache.spark.sql.execution.datasources.v2.V2CommandExec.result(V2CommandExec.scala:43)\n",
-      "\tat org.apache.spark.sql.execution.datasources.v2.V2CommandExec.executeCollect(V2CommandExec.scala:49)\n",
-      "\tat org.apache.spark.sql.execution.QueryExecution$$anonfun$eagerlyExecuteCommands$1.$anonfun$applyOrElse$1(QueryExecution.scala:107)\n",
-      "\tat org.apache.spark.sql.execution.SQLExecution$.$anonfun$withNewExecutionId$6(SQLExecution.scala:125)\n",
-      "\tat org.apache.spark.sql.execution.SQLExecution$.withSQLConfPropagated(SQLExecution.scala:201)\n",
-      "\tat org.apache.spark.sql.execution.SQLExecution$.$anonfun$withNewExecutionId$1(SQLExecution.scala:108)\n",
-      "\tat org.apache.spark.sql.SparkSession.withActive(SparkSession.scala:900)\n",
-      "\tat org.apache.spark.sql.execution.SQLExecution$.withNewExecutionId(SQLExecution.scala:66)\n",
-      "\tat org.apache.spark.sql.execution.QueryExecution$$anonfun$eagerlyExecuteCommands$1.applyOrElse(QueryExecution.scala:107)\n",
-      "\tat org.apache.spark.sql.execution.QueryExecution$$anonfun$eagerlyExecuteCommands$1.applyOrElse(QueryExecution.scala:98)\n",
-      "\tat org.apache.spark.sql.catalyst.trees.TreeNode.$anonfun$transformDownWithPruning$1(TreeNode.scala:461)\n",
-      "\tat org.apache.spark.sql.catalyst.trees.CurrentOrigin$.withOrigin(origin.scala:76)\n",
-      "\tat org.apache.spark.sql.catalyst.trees.TreeNode.transformDownWithPruning(TreeNode.scala:461)\n",
-      "\tat org.apache.spark.sql.catalyst.plans.logical.LogicalPlan.org$apache$spark$sql$catalyst$plans$logical$AnalysisHelper$$super$transformDownWithPruning(LogicalPlan.scala:32)\n",
-      "\tat org.apache.spark.sql.catalyst.plans.logical.AnalysisHelper.transformDownWithPruning(AnalysisHelper.scala:267)\n",
-      "\tat org.apache.spark.sql.catalyst.plans.logical.AnalysisHelper.transformDownWithPruning$(AnalysisHelper.scala:263)\n",
-      "\tat org.apache.spark.sql.catalyst.plans.logical.LogicalPlan.transformDownWithPruning(LogicalPlan.scala:32)\n",
-      "\tat org.apache.spark.sql.catalyst.plans.logical.LogicalPlan.transformDownWithPruning(LogicalPlan.scala:32)\n",
-      "\tat org.apache.spark.sql.catalyst.trees.TreeNode.transformDown(TreeNode.scala:437)\n",
-      "\tat org.apache.spark.sql.execution.QueryExecution.eagerlyExecuteCommands(QueryExecution.scala:98)\n",
-      "\tat org.apache.spark.sql.execution.QueryExecution.commandExecuted$lzycompute(QueryExecution.scala:85)\n",
-      "\tat org.apache.spark.sql.execution.QueryExecution.commandExecuted(QueryExecution.scala:83)\n",
-      "\tat org.apache.spark.sql.Dataset.<init>(Dataset.scala:220)\n",
-      "\tat org.apache.spark.sql.Dataset$.$anonfun$ofRows$2(Dataset.scala:100)\n",
-      "\tat org.apache.spark.sql.SparkSession.withActive(SparkSession.scala:900)\n",
-      "\tat org.apache.spark.sql.Dataset$.ofRows(Dataset.scala:97)\n",
-      "\tat org.apache.spark.sql.SparkSession.$anonfun$sql$1(SparkSession.scala:638)\n",
-      "\tat org.apache.spark.sql.SparkSession.withActive(SparkSession.scala:900)\n",
-      "\tat org.apache.spark.sql.SparkSession.sql(SparkSession.scala:629)\n",
-      "\tat org.apache.spark.sql.SparkSession.sql(SparkSession.scala:659)\n",
-      "\tat java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)\n",
-      "\tat java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)\n",
-      "\tat java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)\n",
-      "\tat java.base/java.lang.reflect.Method.invoke(Method.java:568)\n",
-      "\tat py4j.reflection.MethodInvoker.invoke(MethodInvoker.java:244)\n",
-      "\tat py4j.reflection.ReflectionEngine.invoke(ReflectionEngine.java:374)\n",
-      "\tat py4j.Gateway.invoke(Gateway.java:282)\n",
-      "\tat py4j.commands.AbstractCommand.invokeMethod(AbstractCommand.java:132)\n",
-      "\tat py4j.commands.CallCommand.execute(CallCommand.java:79)\n",
-      "\tat py4j.ClientServerConnection.waitForCommands(ClientServerConnection.java:182)\n",
-      "\tat py4j.ClientServerConnection.run(ClientServerConnection.java:106)\n",
-      "\tat java.base/java.lang.Thread.run(Thread.java:833)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "DataFrame[]"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "table_name = \"ord_hdr_partitioned\"\n",
     "dfh.createOrReplaceTempView(\"hdr\")\n",
@@ -364,10 +148,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "generate 100m row table x 2 in iceberg no partitions\n",
-    "generate same dataset with partitions\n",
-    "test perf\n",
-    "done"
+    "generate 100m row table x 2 in iceberg no partitions - done\n",
+    "generate same dataset with partitions - done\n",
+    "test perf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### steps:\n",
+    "1. generate raw data\n",
+    "2. generate non-partitioned iceberg tables\n",
+    "3. generate partitioned iceberg tables\n",
+    "4. test query perf joining"
    ]
   },
   {
@@ -376,17 +170,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_agg.writeTo(f\"{catalog_name}.{namespace}.{table_name}\") \\\n",
-    "    .using(\"iceberg\") \\\n",
-    "    .createOrReplace()"
-   ]
   }
  ],
  "metadata": {
