--- a/substack/articles/2025.02.22-Pyiceberg_upsert/scratchpad.ipynb
+++ b/substack/articles/2025.02.22-Pyiceberg_upsert/scratchpad.ipynb
@@ -14,7 +14,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%pip install \"git+https://github.com/apache/iceberg-python.git#egg=pyiceberg[pyarrow]\""
+   ]
   },
   {
    "cell_type": "code",
