--- a/substack/articles/2025.10.10-Fuzzy_matching/scratchpad.ipynb
+++ b/substack/articles/2025.10.10-Fuzzy_matching/scratchpad.ipynb
@@ -92,6 +92,40 @@
     ")\n",
     "print(joined_df)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add(x,y): return x+y\n",
+    "def subtract(x,y): return x-y\n",
+    "\n",
+    "ops = {\n",
+    "    \"add\": add,\n",
+    "    \"subtract\": subtract\n",
+    "}\n",
+    "\n",
+    "result = ops[\"add\"](3,4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(result)"
+   ]
   }
  ],
  "metadata": {
