--- a/substack/articles/2025.04.28-iceberg_timetravel/scratchpad.ipynb
+++ b/substack/articles/2025.04.28-iceberg_timetravel/scratchpad.ipynb
@@ -32,7 +32,12 @@
     "    .config(f\"spark.sql.catalog.{catalog_name}.type\", \"hadoop\") \\\n",
     "    .config(f\"spark.sql.catalog.{catalog_name}.warehouse\", warehouse_path) \\\n",
     "    .config(\"spark.jars.packages\", f\"org.apache.iceberg:iceberg-spark-runtime-{spark_version}_{scala_version}:{iceberg_version}\") \\\n",
-    "    .getOrCreate()"
+    "    .config(\"spark.driver.bindAddress\",\"127.0.0.1\") \\\n",
+    "    .config(\"spark.driver.host\", \"localhost\") \\\n",
+    "    .getOrCreate()\n",
+    "\n",
+    "namespace = \"stock_stuff\"\n",
+    "spark.sql(f\"create namespace {namespace}\")"
    ]
   },
   {
@@ -41,9 +46,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "namespace = \"stock_stuff\"\n",
-    "spark.sql(f\"create namespace {namespace}\")\n",
-    "\n",
     "spark.sql(f\"\"\"create or replace table {catalog_name}.{namespace}.tickers\n",
     "        using iceberg\n",
     "        as\n",
@@ -55,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +101,7 @@
        "DataFrame[]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +141,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------------------+-------------------+-------------------+-------------------+\n",
+      "|made_current_at        |snapshot_id        |parent_id          |is_current_ancestor|\n",
+      "+-----------------------+-------------------+-------------------+-------------------+\n",
+      "|2025-04-28 08:50:01.7  |7391578844974642703|NULL               |true               |\n",
+      "|2025-04-28 08:50:10.306|8879485710628370466|7391578844974642703|true               |\n",
+      "+-----------------------+-------------------+-------------------+-------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "spark.sql(f\"select * from {catalog_name}.{namespace}.tickers.history\").show(truncate=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -149,17 +174,21 @@
       "+-------------+-----+\n",
       "|ticker_symbol|price|\n",
       "+-------------+-----+\n",
+      "|         MSFT|23.99|\n",
+      "+-------------+-----+\n",
+      "\n",
+      "+-------------+-----+\n",
+      "|ticker_symbol|price|\n",
+      "+-------------+-----+\n",
       "|         MSFT|21.45|\n",
-      "|         SNOW|34.99|\n",
       "+-------------+-----+\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "#spark.sql(f\"select * from {catalog_name}.{namespace}.tickers.snapshots\").show()\n",
-    "spark.sql(f\"select * from {catalog_name}.{namespace}.tickers TIMESTAMP AS OF '2025-04-28T06:03:00'\").show()\n",
-    "spark.sql(f\"select * from {catalog_name}.{namespace}.tickers TIMESTAMP AS OF '2025-04-28T06:04:00'\").show()"
+    "spark.sql(f\"select * from {catalog_name}.{namespace}.tickers TIMESTAMP AS OF '2025-04-28 08:50:01.7' WHERE ticker_symbol = 'MSFT'\").show()\n",
+    "spark.sql(f\"select * from {catalog_name}.{namespace}.tickers TIMESTAMP AS OF '2025-04-28 08:50:11' WHERE ticker_symbol = 'MSFT'\").show()"
    ]
   },
   {
@@ -168,28 +197,48 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "AnalysisException",
-     "evalue": "[TABLE_OR_VIEW_NOT_FOUND] The table or view `iceberg`.`stock_stuff`.`tickers`.`changelog` cannot be found. Verify the spelling and correctness of the schema and catalog.\nIf you did not qualify the name with a schema, verify the current_schema() output, or qualify the name with the correct schema and catalog.\nTo tolerate the error on drop use DROP VIEW IF EXISTS or DROP TABLE IF EXISTS.; line 1 pos 14;\n'Project [*]\n+- 'UnresolvedRelation [iceberg, stock_stuff, tickers, changelog], [], false\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAnalysisException\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[25]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mspark\u001b[49m\u001b[43m.\u001b[49m\u001b[43msql\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43mf\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mselect * from \u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mcatalog_name\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[33;43m.\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mnamespace\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[33;43m.tickers.changelog\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m.show()\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/dream_machine/substack/articles/2025.04.28-iceberg_timetravel/.venv/lib/python3.13/site-packages/pyspark/sql/session.py:1631\u001b[39m, in \u001b[36mSparkSession.sql\u001b[39m\u001b[34m(self, sqlQuery, args, **kwargs)\u001b[39m\n\u001b[32m   1627\u001b[39m         \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mself\u001b[39m._jvm \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m   1628\u001b[39m         litArgs = \u001b[38;5;28mself\u001b[39m._jvm.PythonUtils.toArray(\n\u001b[32m   1629\u001b[39m             [_to_java_column(lit(v)) \u001b[38;5;28;01mfor\u001b[39;00m v \u001b[38;5;129;01min\u001b[39;00m (args \u001b[38;5;129;01mor\u001b[39;00m [])]\n\u001b[32m   1630\u001b[39m         )\n\u001b[32m-> \u001b[39m\u001b[32m1631\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m DataFrame(\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_jsparkSession\u001b[49m\u001b[43m.\u001b[49m\u001b[43msql\u001b[49m\u001b[43m(\u001b[49m\u001b[43msqlQuery\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlitArgs\u001b[49m\u001b[43m)\u001b[49m, \u001b[38;5;28mself\u001b[39m)\n\u001b[32m   1632\u001b[39m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[32m   1633\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(kwargs) > \u001b[32m0\u001b[39m:\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/dream_machine/substack/articles/2025.04.28-iceberg_timetravel/.venv/lib/python3.13/site-packages/py4j/java_gateway.py:1322\u001b[39m, in \u001b[36mJavaMember.__call__\u001b[39m\u001b[34m(self, *args)\u001b[39m\n\u001b[32m   1316\u001b[39m command = proto.CALL_COMMAND_NAME +\\\n\u001b[32m   1317\u001b[39m     \u001b[38;5;28mself\u001b[39m.command_header +\\\n\u001b[32m   1318\u001b[39m     args_command +\\\n\u001b[32m   1319\u001b[39m     proto.END_COMMAND_PART\n\u001b[32m   1321\u001b[39m answer = \u001b[38;5;28mself\u001b[39m.gateway_client.send_command(command)\n\u001b[32m-> \u001b[39m\u001b[32m1322\u001b[39m return_value = \u001b[43mget_return_value\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m   1323\u001b[39m \u001b[43m    \u001b[49m\u001b[43manswer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mgateway_client\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mtarget_id\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1325\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m temp_arg \u001b[38;5;129;01min\u001b[39;00m temp_args:\n\u001b[32m   1326\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(temp_arg, \u001b[33m\"\u001b[39m\u001b[33m_detach\u001b[39m\u001b[33m\"\u001b[39m):\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/dream_machine/substack/articles/2025.04.28-iceberg_timetravel/.venv/lib/python3.13/site-packages/pyspark/errors/exceptions/captured.py:185\u001b[39m, in \u001b[36mcapture_sql_exception.<locals>.deco\u001b[39m\u001b[34m(*a, **kw)\u001b[39m\n\u001b[32m    181\u001b[39m converted = convert_exception(e.java_exception)\n\u001b[32m    182\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(converted, UnknownException):\n\u001b[32m    183\u001b[39m     \u001b[38;5;66;03m# Hide where the exception came from that shows a non-Pythonic\u001b[39;00m\n\u001b[32m    184\u001b[39m     \u001b[38;5;66;03m# JVM exception message.\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m185\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m converted \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m    186\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m    187\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m\n",
-      "\u001b[31mAnalysisException\u001b[39m: [TABLE_OR_VIEW_NOT_FOUND] The table or view `iceberg`.`stock_stuff`.`tickers`.`changelog` cannot be found. Verify the spelling and correctness of the schema and catalog.\nIf you did not qualify the name with a schema, verify the current_schema() output, or qualify the name with the correct schema and catalog.\nTo tolerate the error on drop use DROP VIEW IF EXISTS or DROP TABLE IF EXISTS.; line 1 pos 14;\n'Project [*]\n+- 'UnresolvedRelation [iceberg, stock_stuff, tickers, changelog], [], false\n"
+     "data": {
+      "text/plain": [
+       "DataFrame[]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spark.sql(f\"\"\"\n",
+    "   create or replace table {catalog_name}.{namespace}.tickers\n",
+    "   using iceberg\n",
+    "   AS\n",
+    "   SELECT * \n",
+    "   FROM {catalog_name}.{namespace}.tickers    \n",
+    "   TIMESTAMP AS OF '2025-04-28 08:50:01.7'   \n",
+    "\"\"\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------+-----+\n",
+      "|ticker_symbol|price|\n",
+      "+-------------+-----+\n",
+      "|         MSFT|23.99|\n",
+      "|         SNOW|34.99|\n",
+      "+-------------+-----+\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "spark.sql(f\"select * from {catalog_name}.{namespace}.tickers.changelog\").show()\n",
-    "\"\"\"\n",
-    "    might need to write a query that joins the history table back to itself to see full audit\n",
-    "    https://iceberg.apache.org/docs/1.8.0/spark-queries/#inspecting-tables\n",
-    "\n",
-    "    if that doesn't work, then a python script to loop through the changes might be needed...\n",
-    "\"\"\"\n"
+    "spark.sql(f\"select * from {catalog_name}.{namespace}.tickers\").show()"
    ]
   }
  ],
