--- a/spark/templates/scratchpad.ipynb
+++ b/spark/templates/scratchpad.ipynb
@@ -34,6 +34,42 @@
    "source": [
     "%pip install pyspark"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66c3a877",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting git+https://github.com/mattmartin14/dream_machine/blob/main/spark/templates/iceberg.py\n",
+      "  Cloning https://github.com/mattmartin14/dream_machine/blob/main/spark/templates/iceberg.py to /private/var/folders/0z/frbjsjbd0gd2zxnmwwqpfvgw0000gn/T/pip-req-build-ypj995wo\n",
+      "  Running command git clone --filter=blob:none --quiet https://github.com/mattmartin14/dream_machine/blob/main/spark/templates/iceberg.py /private/var/folders/0z/frbjsjbd0gd2zxnmwwqpfvgw0000gn/T/pip-req-build-ypj995wo\n",
+      "  fatal: repository 'https://github.com/mattmartin14/dream_machine/blob/main/spark/templates/iceberg.py/' not found\n",
+      "  \u001b[1;31merror\u001b[0m: \u001b[1msubprocess-exited-with-error\u001b[0m\n",
+      "  \n",
+      "  \u001b[31m×\u001b[0m \u001b[32mgit clone --\u001b[0m\u001b[32mfilter\u001b[0m\u001b[32m=\u001b[0m\u001b[32mblob\u001b[0m\u001b[32m:none --quiet \u001b[0m\u001b[4;32mhttps://github.com/mattmartin14/dream_machine/blob/main/spark/templates/iceberg.py\u001b[0m\u001b[32m \u001b[0m\u001b[32m/private/var/folders/0z/frbjsjbd0gd2zxnmwwqpfvgw0000gn/T/\u001b[0m\u001b[32mpip-req-build-ypj995wo\u001b[0m did not run successfully.\n",
+      "  \u001b[31m│\u001b[0m exit code: \u001b[1;36m128\u001b[0m\n",
+      "  \u001b[31m╰─>\u001b[0m See above for output.\n",
+      "  \n",
+      "  \u001b[1;35mnote\u001b[0m: This error originates from a subprocess, and is likely not a problem with pip.\n",
+      "\u001b[1;31merror\u001b[0m: \u001b[1msubprocess-exited-with-error\u001b[0m\n",
+      "\n",
+      "\u001b[31m×\u001b[0m \u001b[32mgit clone --\u001b[0m\u001b[32mfilter\u001b[0m\u001b[32m=\u001b[0m\u001b[32mblob\u001b[0m\u001b[32m:none --quiet \u001b[0m\u001b[4;32mhttps://github.com/mattmartin14/dream_machine/blob/main/spark/templates/iceberg.py\u001b[0m\u001b[32m \u001b[0m\u001b[32m/private/var/folders/0z/frbjsjbd0gd2zxnmwwqpfvgw0000gn/T/\u001b[0m\u001b[32mpip-req-build-ypj995wo\u001b[0m did not run successfully.\n",
+      "\u001b[31m│\u001b[0m exit code: \u001b[1;36m128\u001b[0m\n",
+      "\u001b[31m╰─>\u001b[0m See above for output.\n",
+      "\n",
+      "\u001b[1;35mnote\u001b[0m: This error originates from a subprocess, and is likely not a problem with pip.\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install git+https://github.com/mattmartin14/dream_machine/blob/main/spark/templates/iceberg.py"
+   ]
   }
  ],
  "metadata": {
