--- a/spark/templates/scratchpad.ipynb
+++ b/spark/templates/scratchpad.ipynb
@@ -37,39 +37,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "66c3a877",
+   "execution_count": 5,
+   "id": "d70ab933",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import urllib.request\n",
+    "\n",
+    "url = \"https://raw.githubusercontent.com/mattmartin14/spark_templates/main/iceberg.py\"\n",
+    "urllib.request.urlretrieve(url, \"iceberg.py\")\n",
+    "\n",
+    "from iceberg import create_iceberg_spark_session\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "cfbf3f5a",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Collecting git+https://github.com/mattmartin14/dream_machine/spark/templates/iceberg.git\n",
-      "  Cloning https://github.com/mattmartin14/dream_machine/spark/templates/iceberg.git to /private/var/folders/0z/frbjsjbd0gd2zxnmwwqpfvgw0000gn/T/pip-req-build-i89a6kox\n",
-      "  Running command git clone --filter=blob:none --quiet https://github.com/mattmartin14/dream_machine/spark/templates/iceberg.git /private/var/folders/0z/frbjsjbd0gd2zxnmwwqpfvgw0000gn/T/pip-req-build-i89a6kox\n",
-      "  remote: Not Found\n",
-      "  fatal: repository 'https://github.com/mattmartin14/dream_machine/spark/templates/iceberg.git/' not found\n",
-      "  \u001b[1;31merror\u001b[0m: \u001b[1msubprocess-exited-with-error\u001b[0m\n",
-      "  \n",
-      "  \u001b[31m×\u001b[0m \u001b[32mgit clone --\u001b[0m\u001b[32mfilter\u001b[0m\u001b[32m=\u001b[0m\u001b[32mblob\u001b[0m\u001b[32m:none --quiet \u001b[0m\u001b[4;32mhttps://github.com/mattmartin14/dream_machine/spark/templates/iceberg.git\u001b[0m\u001b[32m \u001b[0m\u001b[32m/private/var/folders/0z/frbjsjbd0gd2zxnmwwqpfvgw0000gn/T/\u001b[0m\u001b[32mpip-req-build-i89a6kox\u001b[0m did not run successfully.\n",
-      "  \u001b[31m│\u001b[0m exit code: \u001b[1;36m128\u001b[0m\n",
-      "  \u001b[31m╰─>\u001b[0m See above for output.\n",
-      "  \n",
-      "  \u001b[1;35mnote\u001b[0m: This error originates from a subprocess, and is likely not a problem with pip.\n",
-      "\u001b[1;31merror\u001b[0m: \u001b[1msubprocess-exited-with-error\u001b[0m\n",
-      "\n",
-      "\u001b[31m×\u001b[0m \u001b[32mgit clone --\u001b[0m\u001b[32mfilter\u001b[0m\u001b[32m=\u001b[0m\u001b[32mblob\u001b[0m\u001b[32m:none --quiet \u001b[0m\u001b[4;32mhttps://github.com/mattmartin14/dream_machine/spark/templates/iceberg.git\u001b[0m\u001b[32m \u001b[0m\u001b[32m/private/var/folders/0z/frbjsjbd0gd2zxnmwwqpfvgw0000gn/T/\u001b[0m\u001b[32mpip-req-build-i89a6kox\u001b[0m did not run successfully.\n",
-      "\u001b[31m│\u001b[0m exit code: \u001b[1;36m128\u001b[0m\n",
-      "\u001b[31m╰─>\u001b[0m See above for output.\n",
-      "\n",
-      "\u001b[1;35mnote\u001b[0m: This error originates from a subprocess, and is likely not a problem with pip.\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
+      "WARNING: Using incubator modules: jdk.incubator.vector\n",
+      ":: loading settings :: url = jar:file:/Users/matthewmartin/dream_machine/spark/templates/.venv/lib/python3.13/site-packages/pyspark/jars/ivy-2.5.3.jar!/org/apache/ivy/core/settings/ivysettings.xml\n",
+      "Ivy Default Cache set to: /Users/matthewmartin/.ivy2.5.2/cache\n",
+      "The jars for the packages stored in: /Users/matthewmartin/.ivy2.5.2/jars\n",
+      "org.apache.iceberg#iceberg-spark-runtime-3.5_2.12 added as a dependency\n",
+      ":: resolving dependencies :: org.apache.spark#spark-submit-parent-462184ae-6eb4-4085-9566-5a5578a3fb94;1.0\n",
+      "\tconfs: [default]\n",
+      "\tfound org.apache.iceberg#iceberg-spark-runtime-3.5_2.12;1.7.0 in central\n",
+      "downloading https://repo1.maven.org/maven2/org/apache/iceberg/iceberg-spark-runtime-3.5_2.12/1.7.0/iceberg-spark-runtime-3.5_2.12-1.7.0.jar ...\n",
+      "\t[SUCCESSFUL ] org.apache.iceberg#iceberg-spark-runtime-3.5_2.12;1.7.0!iceberg-spark-runtime-3.5_2.12.jar (897ms)\n",
+      ":: resolution report :: resolve 1334ms :: artifacts dl 898ms\n",
+      "\t:: modules in use:\n",
+      "\torg.apache.iceberg#iceberg-spark-runtime-3.5_2.12;1.7.0 from central in [default]\n",
+      "\t---------------------------------------------------------------------\n",
+      "\t|                  |            modules            ||   artifacts   |\n",
+      "\t|       conf       | number| search|dwnlded|evicted|| number|dwnlded|\n",
+      "\t---------------------------------------------------------------------\n",
+      "\t|      default     |   1   |   1   |   1   |   0   ||   1   |   1   |\n",
+      "\t---------------------------------------------------------------------\n",
+      ":: retrieving :: org.apache.spark#spark-submit-parent-462184ae-6eb4-4085-9566-5a5578a3fb94\n",
+      "\tconfs: [default]\n",
+      "\t1 artifacts copied, 0 already retrieved (41792kB/25ms)\n",
+      "25/05/28 05:54:58 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "Using Spark's default log4j profile: org/apache/spark/log4j2-defaults.properties\n",
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "25/05/28 05:54:59 WARN SparkSession: Cannot use org.apache.iceberg.spark.extensions.IcebergSparkSessionExtensions to configure session extensions.\n",
+      "java.lang.NoClassDefFoundError: scala/Serializable\n",
+      "\tat org.apache.iceberg.spark.extensions.IcebergSparkSessionExtensions.apply(IcebergSparkSessionExtensions.scala:35)\n",
+      "\tat org.apache.iceberg.spark.extensions.IcebergSparkSessionExtensions.apply(IcebergSparkSessionExtensions.scala:31)\n",
+      "\tat org.apache.spark.sql.classic.SparkSession$.$anonfun$applyExtensions$2(SparkSession.scala:1059)\n",
+      "\tat org.apache.spark.sql.classic.SparkSession$.$anonfun$applyExtensions$2$adapted(SparkSession.scala:1054)\n",
+      "\tat scala.collection.IterableOnceOps.foreach(IterableOnce.scala:619)\n",
+      "\tat scala.collection.IterableOnceOps.foreach$(IterableOnce.scala:617)\n",
+      "\tat scala.collection.AbstractIterable.foreach(Iterable.scala:935)\n",
+      "\tat org.apache.spark.sql.classic.SparkSession$.org$apache$spark$sql$classic$SparkSession$$applyExtensions(SparkSession.scala:1054)\n",
+      "\tat org.apache.spark.sql.classic.SparkSession$.applyAndLoadExtensions(SparkSession.scala:1038)\n",
+      "\tat org.apache.spark.sql.classic.SparkSession.<init>(SparkSession.scala:116)\n",
+      "\tat java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance0(Native Method)\n",
+      "\tat java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance(NativeConstructorAccessorImpl.java:77)\n",
+      "\tat java.base/jdk.internal.reflect.DelegatingConstructorAccessorImpl.newInstance(DelegatingConstructorAccessorImpl.java:45)\n",
+      "\tat java.base/java.lang.reflect.Constructor.newInstanceWithCaller(Constructor.java:499)\n",
+      "\tat java.base/java.lang.reflect.Constructor.newInstance(Constructor.java:480)\n",
+      "\tat py4j.reflection.MethodInvoker.invoke(MethodInvoker.java:247)\n",
+      "\tat py4j.reflection.ReflectionEngine.invoke(ReflectionEngine.java:374)\n",
+      "\tat py4j.Gateway.invoke(Gateway.java:238)\n",
+      "\tat py4j.commands.ConstructorCommand.invokeConstructor(ConstructorCommand.java:80)\n",
+      "\tat py4j.commands.ConstructorCommand.execute(ConstructorCommand.java:69)\n",
+      "\tat py4j.ClientServerConnection.waitForCommands(ClientServerConnection.java:184)\n",
+      "\tat py4j.ClientServerConnection.run(ClientServerConnection.java:108)\n",
+      "\tat java.base/java.lang.Thread.run(Thread.java:833)\n",
+      "Caused by: java.lang.ClassNotFoundException: scala.Serializable\n",
+      "\tat java.base/java.net.URLClassLoader.findClass(URLClassLoader.java:445)\n",
+      "\tat java.base/java.lang.ClassLoader.loadClass(ClassLoader.java:592)\n",
+      "\tat java.base/java.lang.ClassLoader.loadClass(ClassLoader.java:525)\n",
+      "\t... 23 more\n"
      ]
     }
    ],
    "source": [
-    "%pip install git+https://github.com/mattmartin14/dream_machine/spark/templates/iceberg.git"
+    "spark = create_iceberg_spark_session()"
    ]
   }
  ],
