--- a/substack/articles/2025.06.02-Ducklake_Intro/scratchpad.ipynb
+++ b/substack/articles/2025.06.02-Ducklake_Intro/scratchpad.ipynb
@@ -43,7 +43,7 @@
     {
      "data": {
       "text/plain": [
-       "<duckdb.duckdb.DuckDBPyConnection at 0x105caebb0>"
+       "<duckdb.duckdb.DuckDBPyConnection at 0x1069279f0>"
       ]
      },
      "execution_count": 4,
@@ -59,7 +59,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
+   "id": "a3d19e9e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cn.execute(f\"ATTACH 'ducklake:local_flock.ducklake' as local_flock\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "f3d3bda7",
    "metadata": {},
    "outputs": [
@@ -76,11 +86,39 @@
    ],
    "source": [
     "sql = \"\"\"\n",
-    "create or replace table order_header \n",
+    "create or replace table gcs_flock.order_header \n",
     "as \n",
     "select 1 as order_id, date('2023-01-01') as order_dt, 1001 as cust_id, 250.75 as ord_amount\n",
     "union all select 2, date('2023-01-02'), 1002, 150.50\n",
     "union all select 3, date('2023-01-03'), 1003, 300.00\n",
+    "\"\"\"\n",
+    "cn.execute(sql)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "74355e56",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<duckdb.duckdb.DuckDBPyConnection at 0x1069279f0>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sql = \"\"\"\n",
+    "create or replace table local_flock.order_header_spi\n",
+    "as \n",
+    "select 1 as order_id, 'John Doe' as cust_name, date('1987-01-01') as dob\n",
+    "union all select 2, 'Jane Doe', date('1992-03-05')\n",
+    "union all select 3, 'Tom Brady', date('1977-08-14')\n",
     "\"\"\"\n",
     "cn.execute(sql)"
    ]
@@ -113,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "70b2b1c1",
    "metadata": {},
    "outputs": [
@@ -134,7 +172,40 @@
     }
    ],
    "source": [
-    "cn.sql(\"from order_header\").show()"
+    "cn.sql(\"from gcs_flock.order_header\").show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "6c9705d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "┌──────────┬────────────┬─────────┬──────────────┬───────────┬────────────┐\n",
+      "│ order_id │  order_dt  │ cust_id │  ord_amount  │ cust_name │    dob     │\n",
+      "│  int32   │    date    │  int32  │ decimal(5,2) │  varchar  │    date    │\n",
+      "├──────────┼────────────┼─────────┼──────────────┼───────────┼────────────┤\n",
+      "│        1 │ 2023-01-01 │    1001 │       250.75 │ John Doe  │ 1987-01-01 │\n",
+      "│        3 │ 2023-01-03 │    1003 │       300.00 │ Tom Brady │ 1977-08-14 │\n",
+      "└──────────┴────────────┴─────────┴──────────────┴───────────┴────────────┘\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "sql = \"\"\"\n",
+    "    select oh.order_id, oh.order_dt, oh.cust_id, oh.ord_amount, oh_spi.cust_name, oh_spi.dob\n",
+    "    from gcs_flock.order_header oh\n",
+    "    join local_flock.order_header_spi oh_spi\n",
+    "    on oh.order_id = oh_spi.order_id\n",
+    "    where oh.ord_amount > 200\n",
+    "    order by oh.order_id\n",
+    "\"\"\"\n",
+    "cn.sql(sql).show()"
    ]
   }
  ],
