--- a/substack/articles/2025.06.02-Ducklake_Intro/scratchpad.ipynb
+++ b/substack/articles/2025.06.02-Ducklake_Intro/scratchpad.ipynb
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "6c9705d8",
    "metadata": {},
    "outputs": [
@@ -200,7 +200,7 @@
     "sql = \"\"\"\n",
     "    select oh.order_id, oh.order_dt, oh.cust_id, oh.ord_amount, oh_spi.cust_name, oh_spi.dob\n",
     "    from gcs_flock.order_header oh\n",
-    "    join local_flock.order_header_spi oh_spi\n",
+    "        inner join local_flock.order_header_spi oh_spi\n",
     "    on oh.order_id = oh_spi.order_id\n",
     "    where oh.ord_amount > 200\n",
     "    order by oh.order_id\n",
