--- a/substack/articles/2025.07.08 - die_hard_xmas/scratchpad.ipynb
+++ b/substack/articles/2025.07.08 - die_hard_xmas/scratchpad.ipynb
@@ -181,6 +181,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2c82fd5c",
+   "metadata": {},
+   "source": [
+    "### comparing die hard to It's a Wonderful Life"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "id": "007bee6d",
